--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "private": true,
   "homepage": "https://neochainer.space/",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.9.5",
+    "@mantine/form": "^5.9.5",
+    "@mantine/hooks": "^5.9.5",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.18",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^18.0.10",
     "axios": "^1.1.3",
     "classnames": "2.3.1",
     "react": "16.14.0",
@@ -20,6 +28,7 @@
     "redux-thunk": "2.4.1",
     "sass": "1.49.9",
     "swiper": "8.0.7",
+    "typescript": "^4.9.4",
     "web-vitals": "2.1.4"
   },
   "scripts": {
